Completed Static Controller
